payment gateway integrated

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="./assets/images/sgs-logo-corp.png" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     </head>
 
     <body class="mat-typography">
